SERVER-117122 Fix coverity error in query retry util - Operands don't affect result (#46378)

GitOrigin-RevId: 9ddb09cbea79a57ac4cf784c777747a243ea8f1d